--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8">
   <title>帮助文档 - by YZL3014</title>
@@ -8,15 +9,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/docsify/4.13.1/themes/vue.min.css">
 </head>
+
 <body>
   <div id="app">加载中</div>
   <script>
     window.$docsify = {
       name: '帮助文档',
-      homepage: 'doc.md'
+      homepage: 'doc.md',
+      repo: "https://github.com/yzl3014/docs"
     }
   </script>
   <!-- Docsify v4 -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/docsify/4.13.1/docsify.min.js"></script>
 </body>
+
 </html>
