补充免责声明

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/docsify/4.13.1/themes/vue.min.css">
+  <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+  <script>LA.init({ id: "JgXJhx4FBiEDiEGR", ck: "JgXJhx4FBiEDiEGR" })</script>
 </head>
 
 <body>
@@ -15,8 +17,7 @@
   <script>
     window.$docsify = {
       name: '帮助文档',
-      homepage: 'doc.md',
-      repo: "https://github.com/yzl3014/docs"
+      homepage: 'doc.md'
     }
   </script>
   <!-- Docsify v4 -->
